--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,52 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+div.table-data div {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+div.table-data div.row {
+	border-bottom: 1px solid white;
+}
+
+.nav-link {
+	cursor: pointer;
+}
+
+body {
+	background: black url('/background.png');
+	color: #CCCCCC;
+}
+
+.logo {
+	width: 100%;
+	height: auto;
+	max-width: 350px;
+}
+
+.star-resource * {
+	display: inline-block;
+}
+.star-resource:hover, .star-resource.is-starred {
+	color: rgb(255, 244, 189);
+}
+
+.loader-image-container {
+	text-align: center;
+}
+
+.loader-image {
+	width: 120px;
+	height: 120px;
+	margin:20px 0 0 0;
+	-webkit-animation:spin 4s linear infinite;
+	-moz-animation:spin 4s linear infinite;
+	animation:spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
